--- a/src/app/task-notification-card/task-notification-card.component.scss
+++ b/src/app/task-notification-card/task-notification-card.component.scss
@@ -1,5 +1,5 @@
 @import '../../assets/styles/variables';
-@import '../../assets/styles/mixins/multi-line-ellipsis';
+@import '../../assets/styles/mixins';
 @import '../../assets/styles/font-icons';
 
 
@@ -11,25 +11,6 @@
   background: $white;
   font-size: $tiny-font-size;
   border-bottom: $border;
-
-  .notification-icon {
-    width: 35px;
-    height: 35px;
-    background: $black;
-    color: $white;
-    text-align: center;
-    border-radius: 3px;
-
-    .icon-tasks {
-      font-size: 15px;
-      margin-top: 4px;
-    }
-
-    .priority {
-      font-size: $mini-font-size;
-      font-weight: bold;
-    }
-  }
 
   .notification-content {
     width: 100%;
