FSPA-248 #comment added notification card component

--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -28,7 +28,7 @@
     [itemsCount]="5"
     [width]="400"
     [notificationType]="'notifications'">
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+      <notification-card></notification-card>
       <message-notification [user]="testUser" [message]="'test message'"></message-notification>
       <message-notification [user]="testUser" [message]="'test message'"></message-notification>
       <message-notification [user]="testUser" [message]="'test message'"></message-notification>
