FSPA-248 #comment rename notification card test data

--- a/src/app/notification-card/notification-card.component.html
+++ b/src/app/notification-card/notification-card.component.html
@@ -1,5 +1,5 @@
 <div class="notification-card-container">
-  <notification-card-icon [type]="notification.type"></notification-card-icon>
+  <notification-card-icon [eventType]="notification.eventType"></notification-card-icon>
   <div class="notification-content">
     <p class="name">{{notification.name}}</p>
     <p class="message">{{notification.message}}</p>
