--- a/src/app/shared/components/bd-icons/notification-card-icon/notification-card-icon.component.html
+++ b/src/app/shared/components/bd-icons/notification-card-icon/notification-card-icon.component.html
@@ -1,5 +1,5 @@
 <div
-[style.color]="getTypeColor"
+[style.color]="getEventTypeColor"
 [class.icon-success]="!iconClass"
 [class.icon-error]="iconClass">
 </div>
