--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -8,30 +8,22 @@
     [itemsCount]="5888"
     [width]="400"
     [notificationType]="'tasks'">
-      <task-notification-card
+      <!-- <task-notification-card
       *ngFor="let notification of this.notifications"
       [notification]="notification">
-    </task-notification-card>
+    </task-notification-card> -->
 </bd-notification-popover>
 <bd-notification-popover
     [itemsCount]="1"
     [width]="400"
     [notificationType]="'messages'">
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+
 </bd-notification-popover>
 <bd-notification-popover
     [itemsCount]="5"
     [width]="400"
     [notificationType]="'notifications'">
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+
 </bd-notification-popover>
 
   <span>
