FSPA-248 #comment code refactoring

--- a/src/app/shared/components/bd-icons/notification-card-icon/notification-card-icon.component.scss
+++ b/src/app/shared/components/bd-icons/notification-card-icon/notification-card-icon.component.scss
@@ -1,7 +1,6 @@
 @import '../../../../../assets/styles/variables';
 @import '../../../../../assets/styles/font-icons';
 
-.icon-error,
-.icon-success {
+.icons {
   font-size: 35px;
 }
