--- a/src/app/shared/components/notification-cards/message-card/message-card.component.html
+++ b/src/app/shared/components/notification-cards/message-card/message-card.component.html
@@ -20,7 +20,7 @@
         {{message}}
       </div>
       <div class="message-date">
-        {{date}}
+        {{date | bdTimeAgo}}
       </div>
     </div>
   </div>
