--- a/src/app/shared/components/bd-icons/notification-card-icon/notification-card-icon.component.html
+++ b/src/app/shared/components/bd-icons/notification-card-icon/notification-card-icon.component.html
@@ -1,5 +1,5 @@
 <div
-[style.color]="eventTypeColor"
+[style.color]="notificationStatusColor"
 class="icons"
 [class.icon-success]="isSuccess"
 [class.icon-error]="!isSuccess">
