--- a/src/app/shared/components/notification-cards/notification-card/notification-card.component.scss
+++ b/src/app/shared/components/notification-cards/notification-card/notification-card.component.scss
@@ -1,6 +1,6 @@
-@import '../../assets/styles/variables';
-@import '../../assets/styles/mixins';
-@import '../../assets/styles/font-icons';
+@import '../../../../../assets/styles/variables';
+@import '../../../../../assets/styles/font-icons';
+@import '../../../../../assets/styles/mixins';
 
 
 .notification-card-container {
