fix message card styles

--- a/src/app/shared/components/notification-cards/message-card/message-card.component.scss
+++ b/src/app/shared/components/notification-cards/message-card/message-card.component.scss
@@ -16,10 +16,12 @@
 
     .circle-container {
       width: auto;
+      max-width: 15%;
       margin-right: $popover-margin;
     }
 
     .content-container {
+      width: 85%;
       flex-grow: 1;
 
       .message-sender {
