FSPA-266 #comment make notification card closable

--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
@@ -49,6 +49,7 @@
               <div *ngSwitchCase="'notification'">
                 <notification-card
                   *ngFor="let item of items"
+                  [isClosable]="false"
                   [notification]="item">
                 </notification-card>
               </div>
