--- a/src/app/shared/components/notification-cards/notification-card/notification-card.component.html
+++ b/src/app/shared/components/notification-cards/notification-card/notification-card.component.html
@@ -1,8 +1,22 @@
-<div class="notification-card-container">
-  <notification-card-icon [eventType]="notification.notificationStatus"></notification-card-icon>
-  <div class="notification-content">
-    <p class="name">{{notification.title}}</p>
-    <p class="message">{{notification.message}}</p>
-    <p class="date">{{notification.date}}</p>
+<div class="notification-card-container"
+     [class.closable]="isClosable">
+  <div class="title-container">
+    <span class="title-text">{{notification.title}}</span>
+    <button
+      class="btn-close icon-close"
+      (click)="onCloseClick($event)">
+    </button>
+  </div>
+  <div class="notification-container">
+    <notification-card-icon [eventType]="notification.notificationStatus"></notification-card-icon>
+    <div class="content-container">
+      <div class="notification-title">{{notification.title}}</div>
+      <div class="notification-message">
+      {{notification.message}}
+      </div>
+      <div class="date">
+      {{notification.date}}
+      </div>
+    </div>
   </div>
 </div>
