FSPA-264 #comment make task notification card closable

--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
@@ -41,6 +41,7 @@
               <div *ngSwitchCase="'task'">
                 <task-card
                   *ngFor="let item of items"
+                  [isClosable]="true"
                   [notification]="item"
                   >
                 </task-card>
