--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,8 +61,7 @@ main {
 
 bd-toast-manager {
   position: absolute;
-  width: 200px;
-  bottom: 20px;
-  margin-left: 20px;
+  width: 350px;
+  bottom: 0;
 }
 /*page layout end*/
