FSPA-247 #comment changed task notification card icon, checked font size by pixel perfect

--- a/src/app/shared/components/bd-icons/notification-icon/notification-icon.component.html
+++ b/src/app/shared/components/bd-icons/notification-icon/notification-icon.component.html
@@ -1,4 +1,4 @@
 <div [style.background]="getEventTypeColor" class="notification-icon">
-  <div class="icon-tasks"></div>
+  <div class="icon-task-succes-icon"></div>
   <p class="priority">{{priorityText}}</p>
 </div>
