--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
@@ -32,7 +32,7 @@
               <div *ngSwitchCase="'message'">
                 <message-card
                   *ngFor="let item of items"
-                  [isClosable]="false"
+                  [isClosable]="true"
                   [notification]="item">
                 </message-card>
               </div>
@@ -40,7 +40,7 @@
               <div *ngSwitchCase="'task'">
                 <task-card
                   *ngFor="let item of items"
-                  [isClosable]="false"
+                  [isClosable]="true"
                   [notification]="item"
                   >
                 </task-card>
@@ -49,7 +49,7 @@
               <div *ngSwitchCase="'notification'">
                 <notification-card
                   *ngFor="let item of items"
-                  [isClosable]="false"
+                  [isClosable]="true"
                   [notification]="item">
                 </notification-card>
               </div>
