FSPA-245 #comment code refactoring

--- a/src/app/shared/components/notification-cards/message-card/message-card.component.html
+++ b/src/app/shared/components/notification-cards/message-card/message-card.component.html
@@ -4,7 +4,7 @@
     <span class="title-text">New Message</span>
     <button
       class="btn-close icon-close"
-      (click)="onCloseClick($event)">
+      (click)="onClose($event)">
     </button>
   </div>
   <div class="message-container">
