--- a/src/app/shared/components/notification-cards/task-card/task-card.component.html
+++ b/src/app/shared/components/notification-cards/task-card/task-card.component.html
@@ -4,7 +4,7 @@
     <span class="title-text">{{notification.title}}</span>
     <button
       class="btn-close icon-close"
-      (click)="onCloseClick($event)">
+      (click)="onClose($event)">
     </button>
   </div>
   <div class="notification-container">
