--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -7,21 +7,21 @@
 <bd-notification-popover
     [itemsCount]="5888"
     [width]="400"
-    [notificationType]="'task'"
+    [notificationType]="notificationTypeEnum.Task"
     [items]="testNotifications">
 </bd-notification-popover>
 
 <bd-notification-popover
     [itemsCount]="1"
     [width]="400"
-    [notificationType]="'message'"
+    [notificationType]="notificationTypeEnum.Message"
     [items]="testNotifications">
 </bd-notification-popover>
 
 <bd-notification-popover
     [itemsCount]="5"
     [width]="400"
-    [notificationType]="'notification'"
+    [notificationType]="notificationTypeEnum.Notification"
     [items]="testNotifications">
 </bd-notification-popover>
 
