--- a/src/app/shared/components/notification-cards/task-card/task-card.component.html
+++ b/src/app/shared/components/notification-cards/task-card/task-card.component.html
@@ -15,7 +15,7 @@
       {{notification.message}}
       </div>
       <div class="date">
-      {{notification.date}}
+      {{notification.date | bdTimeAgo}}
       </div>
     </div>
   </div>
