--- a/src/app/bd-toast-manager/bd-toast-manager.component.scss
+++ b/src/app/bd-toast-manager/bd-toast-manager.component.scss
@@ -22,7 +22,7 @@
     bottom: 0;
 
     &.remove {
-      transition: all .5s;
+      transition: all 500ms;
       opacity: 0;
       margin-bottom: -100px;
     }
