fix bug with popover showing on click outside

--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
@@ -10,7 +10,7 @@
       #notifyPopover
       placement="bottom"
       [horizontalOffset]="-10"
-      [closeOnClickOutside]="false"
+      [closeOnClickOutside]="true"
       [width]="width"
       class="bd-popover-content">
           <div class="notifications-container">
