--- a/src/app/shared/components/notification-cards/task-card/task-card.component.scss
+++ b/src/app/shared/components/notification-cards/task-card/task-card.component.scss
@@ -4,7 +4,7 @@
 
 
 .task-notification-container {
-  background: $white;
+  background: $light-blue;
 
   .title-container {
     display: none;
@@ -102,6 +102,10 @@
         }
       }
     }
+  }
+
+  &.had-seen-notification {
+    background: $white;
   }
 
   &:hover {
