--- a/src/app/shared/components/notification-cards/message-card/message-card.component.scss
+++ b/src/app/shared/components/notification-cards/message-card/message-card.component.scss
@@ -3,7 +3,7 @@
 @import '../../../../../assets/styles/mixins';
 
 .message-card-container {
-  background: $white;
+  background: $light-blue;
 
   .title-container {
     display: none;
@@ -112,6 +112,10 @@
       }
     }
 
+  }
+
+  &.had-seen-notification {
+    background: $white;
   }
 
   &:hover {
