--- a/src/app/shared/components/notification-cards/task-card/task-card.component.html
+++ b/src/app/shared/components/notification-cards/task-card/task-card.component.html
@@ -1,4 +1,5 @@
 <div class="task-notification-container"
+     [class.had-seen-notification]="hadSeenNotification"
      [class.closable]="isClosable">
   <div class="title-container">
     <span class="title-text">{{notification.title}}</span>
